# CCinCC85

./: .gitignore  .pre-commit-config.yaml  README.md  paraview-job  pyproject.toml  sample_makefile  slurm-script  wind-parameters.py
cc85/: cooling_source.c  info.h  init.c  initialize.c  local_gvars.h  local_make  local_pluto.h  main.c  runtime_setup.c  set_grid.c  set_output.c  slurm-script  tracking.c  userdef_output.c
cc85/cartesian/: frame_boost.c  init.c  local_gvars.h  local_make  local_pluto.h  main.c  slurm-script  split_source.c  userdef_output.c  write_vtk.c
cc85/prs-degen/output-prs_2.5e5/: info.yaml
cc85/python-scripts/analysis-scripts/: 2d-pdfs_cloud.py  AnalyzePressure.py  AnalyzeSnap.py  Rthres-estimate.py  adiabatic-ccincc85.py  area+volume.sh  area+volume_paraview-filters.py  area-calculator_paraview.py  area.sh  cloud-analysis_paraview-filters.py  (+46 more)
cc85/scaling-approx/: CatalystAdaptor.h  cooling_source.c  definitions.h  frame_boost.c  init.c  local_make  local_pluto.h  main.c  makefile  pluto.ini  scaling.c  slurm-script  split_source.c  userdef_output.c
cc85/wind-cooling/: cooling_source.c  definitions.h  init.c  local_make  main.c  makefile  mappers.c  plot_cooltable.py  pluto.ini  runtime_setup.c  slurm-script  userdef_output.c  wind.c  wind.h
requirements/: requirements-dev.txt  requirements.txt
vanilla/: cmd_line_opt.c  get_nghost.c  hdf5_io.c  init.c  local_gvars.h  local_make  local_pluto.h  main.c  mappers.c  mean_mol_weight.c  runtime_setup.c  set_geometry.c  set_output.c  slurm-script  tracking.c  userdef_output.c  var_names.c
(+97 files in other folders)
