[tool.poetry]
name = "cc-in-cc85"
version = "0.1.0"
description = "Cloud crushing simulations in Chevalier Clegg galactic wind using PLUTO"
authors = ["Alankar Dutta <dutta.alankar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.11,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
h5py = "^3.8.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
